fix syting: 	-navigation width collapse when top-wrapper has no content 	-allow for centering image in content
	add some comment in ddblog sass file

--- a/sass/wefc-theme/_wefc-etc.sass
+++ b/sass/wefc-theme/_wefc-etc.sass
@@ -16,6 +16,10 @@
   img.right 
     float: right
     margin: 10.5px 0 10.5px 21.875px
+    
+  img.center
+    margin: 15px auto
+    display: block  
 
 
 /* - - search form - - */
