--- a/sass/wefc-theme/_wefc-pages.sass
+++ b/sass/wefc-theme/_wefc-pages.sass
@@ -36,6 +36,7 @@ body
 #top-wrap-inner
   float: left
   padding: 2px
+  width: 98% // prevent cliping at the right side of the box
   
 
 #content-inner
